--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,20 +8,25 @@
     <link rel="stylesheet" href="static/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
+
 <body>
+    <div class="grid-container">
+        <div><a href="/">Home</a></div>
+        <div><a href="/index">Inference</a></div>
+        <div><a href="/about">About</a></div>
+    </div>
     <div class="container">
-        <h1>DefectVision AI</h1>
         <form id="upload-form">
             <label for="file-upload">Upload Car Image:</label>
             <input type="file" id="file-upload" accept="image/*">
             <label for="model-select">Choose a Detection Model:</label>
             <select id="model-select">
                 <option value="model1">Model 1: Yolov8 Medium</option>
-		<option value="model1">Model 2: Yolov8 Mini</option>
-		<option value="model1">Model 3: Yolov8 Large</option>
-		<option value="model1">Model 4: Yolov8 Large XL</option>
-                <option value="model2">Model 5: DetectronV2 Medium</option>
-                <option value="model2">Model 6: DetectronV2 Mini</option>
+                <option value="model2">Model 2: Yolov8 Mini</option>
+                <option value="model3">Model 3: Yolov8 Large</option>
+                <option value="model4">Model 4: Yolov8 Large XL</option>
+                <option value="model5">Model 5: DetectronV2 Medium</option>
+                <option value="model6">Model 6: DetectronV2 Mini</option>
             </select>
             <button type="button" id="submit-button">Submit for Analysis</button>
         </form>
@@ -36,4 +42,5 @@
     </div>
     <script src="static/script.js"></script>
 </body>
+
 </html>
