--- a/static/styles.css
+++ b/static/styles.css
@@ -48,6 +48,71 @@ body {
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1); /* Optional: Adds some depth */
 }
 
+/* Turning the card from front to back*/
+.card {
+    perspective: 1000px;
+}
+
+.card-inner {
+    position: relative;
+    width: 300px;
+    height: 400px;
+    transform-style: preserve-3d;
+    transition: transform 0.8s;
+    cursor: pointer;
+}
+.card-front {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #121212;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    overflow: hidden; /* Ensures the image stays within the boundaries */
+}
+
+.card-front img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Ensures the image covers the div */
+}
+
+.card-front, .card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+}
+
+.card-front {
+    background-color: #121212;
+}
+
+.card img{
+    width: 100%;
+    color:#fff;
+    object-fit: cover;
+}
+
+.card-back {
+    background-color: #121212;
+    color: #fff;
+    transform: rotateY(180deg);
+}
+
+.card-back p {
+    text-align: center;
+    padding: 10px;
+}
+
 .grid-container{
     display: grid;
     padding: 25px;
