--- a/templates/about.html
+++ b/templates/about.html
@@ -15,26 +15,67 @@
         <div><a href="/index">Inference</a></div>
         <div><a href="/about">About</a></div>
     </div>
-    <p>This page provides information about authors</p>
     <div class="image-container">
-        <div>
-            <img src="static/images/notfound.png" alt="" height="400px" width="300px">
-            <p>Aashi Sharma, Team Leader</p>
+        <div class="card">
+            <div class="card-inner">
+                <div class="card-front">
+                    <img src="static/images/notfound.png" alt="Aashi Sharma">
+                    <p>Aashi Sharma, Team Leader</p>
+                </div>
+                <div class="card-back">
+                </p>Expert in Project Management and AI Systems.</p>
+                </div>
+            </div>
         </div>
-        <div><img src="static/images/prakhar.jpg" alt="" height="400px" width="300px">
-            <p>Prakhar Bhadauria, Generalist</p>
+        <div class="card">
+            <div class="card-inner">
+                <div class="card-front">
+                    <img src="static/images/prakhar.jpg" alt="Prakhar Bhadauria">
+                    <p>Prakhar Bhadauria, Generalist</p>
+                </div>
+                <div class="card-back">
+                </p>Skilled in diverse technical and managerial roles.</p>
+                </div>
+            </div>
         </div>
-        <div><img src="static/images/kaustubh.jpg" alt="" height="400px" width="300px">
-            <p>Kaustubh Ghale, Web Master</p>
+        <div class="card">
+            <div class="card-inner">
+                <div class="card-front">
+                    <img src="static/images/kaustubh.jpg" alt="Kaustubh Ghale">
+                    <p>Kaustubh Ghale, Web Master</p>
+                </div>
+                <div class="card-back">
+                </p>Proficient in web technologies and front-end development.</p>
+                </div>
+            </div>
         </div>
     </div>
     <div class="image-container-bottom">
-        <div><img src="static/images/siddarth.jpg" alt="" height="400px" width="300px">
-            <p>Siddarth Panditrao, Model Expert</p>
+        <div class="card">
+            <div class="card-inner">
+                <div class="card-front">
+                    <img src="static/images/siddarth.jpg" alt="Siddarth Panditrao">
+                    <p>Siddarth Panditrao, Model Expert</p>
+                </div>
+                <div class="card-back">
+                </p>Specialized in AI model design and optimization.</p>
+                </div>
+            </div>
         </div>
-        <div><img src="static/images/rat.jpg" alt="" height="400px" width="300px">
-            <p>Amey Darokar, Azure Specialist</p>
+        <div class="card">
+            <div class="card-inner">
+                <div class="card-front">
+                    <img src="static/images/rat.jpg" alt="Amey Darokar">
+                    <p>Amey Darokar, Azure Specialist</p>
+                </div>
+                <div class="card-back">
+                </p>Expert in Azure cloud solutions and integrations.</p>
+                </div>
+            </div>
         </div>
     </div>
+
+    <script src="static/script.js"></script>
 </body>
+
 </html>
