--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,14 @@
 <body>
     <div class="grid-container">
         <div><a href="/">Home</a></div>
-        <div><a href="/index">Inference</a></div>
+        <div class="dropdown">
+            <button class="dropbtn">Inference</button>
+            <div class="dropdown-content">
+                <a href="/index">Image</a>
+                <a href="/video">Video</a>
+                <a href="/live">Live</a>
+            </div>
+        </div> 
         <div><a href="/about">About</a></div>
     </div>
     <p>This page is the main homepage</p>
