--- a/templates/about.html
+++ b/templates/about.html
@@ -82,7 +82,7 @@
         </div>
     </div>
 
-    <script src="static/script.js"></script>
+    <script src="static/card.js"></script>
 </body>
 
 </html>
