Video inference fix on website

--- a/templates/video.html
+++ b/templates/video.html
@@ -40,11 +40,9 @@
         <div id="results" style="display:none;">
             <h2>Analysis Results</h2>
             <p id="ai-response"></p>
-            <h3>Processed Video</h3>
-            <video id="generated-video" controls alt="Processed Video" style="max-width: 100%; height: auto;">
-                <source id="video-source" src="" type="video/mp4">
-                <source id="avi-video-source" src="" type="video/avi">
-            </video>
+            <div id="download-link" style="display:none;">
+                <p><a id="download-button" href="" target="_blank" download="processed_video.mp4">Click here to download the processed video</a></p>
+            </div>
         </div>
     </div>
 
