Put JS code that was in live.html into an external file called live.js

--- a/templates/live.html
+++ b/templates/live.html
@@ -34,18 +34,6 @@
         <img id="video-feed" src="{{ url_for('video_feed') }}" alt="Video Feed">
         <button type="button" id="Stop-live">Stop</button>
     </div>
-    <script>
-        document.getElementById('submit-video-button').addEventListener('click', function() {
-        var model = document.getElementById('model-select').value;
-        var videoFeed = document.getElementById('video-feed');
-        videoFeed.src = '/video_feed?model=' + model; // Set the source of the image to the video feed URL
-        videoFeed.style.display = 'block'; // Show the image element
-        });
-        document.getElementById('Stop-live').addEventListener('click', function() {
-        var videoFeed = document.getElementById('video-feed');
-        videoFeed.src = ''; // Stop the feed by clearing the source URL
-        videoFeed.style.display = 'none'; // Optionally hide the image
-        });
-    </script>
+    <script src="static/live.js"></script>
 </body>
 </html>
