--- a/templates/about.html
+++ b/templates/about.html
@@ -26,7 +26,7 @@
         <div class="card">
             <div class="card-inner">
                 <div class="card-front">
-                    <img src="static/images/notfound.png" alt="Aashi Sharma">
+                    <img src="static/images/Aashi.png" alt="Aashi Sharma">
                     <p>Aashi Sharma, Team Leader</p>
                 </div>
                 <div class="card-back">
@@ -37,7 +37,7 @@
         <div class="card">
             <div class="card-inner">
                 <div class="card-front">
-                    <img src="static/images/prakhar.jpg" alt="Prakhar Bhadauria">
+                    <img src="static/images/Prakhar.png" alt="Prakhar Bhadauria">
                     <p>Prakhar Bhadauria, Generalist</p>
                 </div>
                 <div class="card-back">
@@ -48,7 +48,7 @@
         <div class="card">
             <div class="card-inner">
                 <div class="card-front">
-                    <img src="static/images/kaustubh.jpg" alt="Kaustubh Ghale">
+                    <img src="static/images/Kaustubh.jpg" alt="Kaustubh Ghale">
                     <p>Kaustubh Ghale, Web Master</p>
                 </div>
                 <div class="card-back">
@@ -61,7 +61,7 @@
         <div class="card">
             <div class="card-inner">
                 <div class="card-front">
-                    <img src="static/images/siddarth.jpg" alt="Siddarth Panditrao">
+                    <img src="static/images/Siddharth.png" alt="Siddharth Panditrao">
                     <p>Siddarth Panditrao, Model Expert</p>
                 </div>
                 <div class="card-back">
@@ -72,7 +72,7 @@
         <div class="card">
             <div class="card-inner">
                 <div class="card-front">
-                    <img src="static/images/rat.jpg" alt="Amey Darokar">
+                    <img src="static/images/Amey.png" alt="Amey Darokar">
                     <p>Amey Darokar, Azure Specialist</p>
                 </div>
                 <div class="card-back">
