document generation for image

--- a/templates/index.html
+++ b/templates/index.html
@@ -44,6 +44,8 @@
                 <p><strong>Class Names:</strong> <span id="class-names"></span></p>
                 <p><strong>Mask Areas:</strong> <span id="mask-areas"></span></p>
             </div>
+            <h3>Download Report</h3>
+            <a href="/doc/Report.docx" target="_blank" id="download-link">Download Report.docx</a>
             <h3>Processed Image</h3>
             <img id="generated-image" alt="Processed Image">
         </div>        
