--- a/templates/about.html
+++ b/templates/about.html
@@ -1,27 +1,32 @@
-<!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DefectVision AI (Dark Mode)</title>
+    <title>DefectVision</title>
     <link rel="stylesheet" href="static/styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
-
 <body>
-    <div class="grid-container">
-        <div><a href="/">Home</a></div>
-        <div class="dropdown">
-            <button class="dropbtn">Inference</button>
-            <div class="dropdown-content">
-                <a href="/index">Image</a>
-                <a href="/video">Video</a>
-                <a href="/live">Live</a>
+    <header>
+        <div class="logo">
+            <h2>DefectVision</h2>
+        </div>
+        <nav>
+            <a href="/">Home</a>
+            <a href="/features">Features</a>
+            <a href="/documentation">Documentation</a>
+            <div class="dropdown">
+                <button class="dropdown-btn">Inference</button>
+                <div class="dropdown-content">
+                    <a href="/image">Image</a>
+                    <a href="/video">Video</a>
+                    <a href="/live">Live</a>
+                </div>
             </div>
-        </div> 
-        <div><a href="/about">About</a></div>
-    </div>
+        </nav>
+        <div>
+            <a href="/about" style="margin-right: 10px;">About</a>
+        </div>
+    </header>
     <div class="image-container">
         <div class="card">
             <div class="card-inner">
